--- a/estudiantes.html
+++ b/estudiantes.html
@@ -57,6 +57,16 @@
                     </div>
                   </div>
             </section>
+            <section class="col-8">
+                <div class="card" style="width: 18rem;">
+                    <div class="card-body">
+                      <h5 class="card-title">LUIS SANCHO</h5>
+                      <h6 class="card-subtitle mb-2 text-muted">ESTUDIANTE</h6>
+                      <p class="card-text">ME av a ir bien en la evaluación.</p>
+                      <a href="santiagojara.html" class="card-link">Ver más ...</a>
+                    </div>
+                  </div>
+            </section>
         </section>
     </main>
     <br>
