Se agrego la seccion en el index.html

--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
                       <ul class="dropdown-menu">
                         <li><a class="dropdown-item" href="santiagojara.html">Santiago Jara Moya</a></li>
                       </ul>
+<ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="luissancho.html">Luis Sancho</a></li>
+                      </ul>
                     </li>
                     </ul>
                 </div>
