--- a/luissancho.html
+++ b/luissancho.html
@@ -43,7 +43,7 @@
     <br>
     <main class="container">
         <section class="row">
-          <h1 class="text-center">MANEJO Y CONFIGURACIÓN DE SOFTWARE</h1>
+          <h1 class="text-center">PAGINA COPIA LUIs</h1>
           <h3 class="text-center">PERIODO OCTUBRE 2022 / MARZO 2023</h3>
           <hr>
             <section class="col-8">
@@ -51,7 +51,7 @@
                   La asignatura de Manejo y Configuración del Software se estructura en 4 unidades curriculares profesionales en las cuales se describen procesos para controlar sistemas software que se encuentran en evolución y que atraviesan cambios.
                 </p>
                 <h4>OBJETIVO</h4>
-                <p>Aplicar el control de cambios del software mediante procesos de administración y configuración para la aplicación en proyectos informáticos.</p>
+                <p>ESTA ES UNA NUEVA PAGINAAAAAAAAAAAAAAAAAAAAAAAAAA</p>
                 <h4>CONTENIDO</h4>
                 <img src="img/contenido.png" class="img-fluid" alt="...">
             </section>
